K8S/platforms-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: platformnpservice-srv
spec:
  type: NodePort # Use NodePort or ClusterIP if not on cloud-managed K8s(LoadBalancer,NodePort,ClusterIP)
  selector:
    app: platformservice
  ports:
  - name: platformservice
    protocol: TCP
    port: 80
    targetPort: 80
